# smelly-hooks

./: Cargo.toml  README.md  build.rs  test_harness.json
examples/: harness.rs
src/: ast.rs  command.rs  errors.rs  lib.rs  main.rs  redirect.rs
test_data/: abuild.install  biblioteca.install  emscripten.install  lib32-gtk2.install  nwg-shell.install  syslinux.install  systemtap.install  vcpkg.install  wire-desktop.install
